--- a/graph_templates/dashboards/portal/dash.yaml
+++ b/graph_templates/dashboards/portal/dash.yaml
@@ -6,4 +6,4 @@
  :vertical_mark_color: "#330000"
  :environment: ["stable", "beta"]
  :app: portal
- :version: [01.00.00, 01.01.15, 02.12.12]
+ :version: [01.00.00]
