fix no graphicos das outras apps

--- a/graph_templates/dashboards/VChnnl/dash.yaml
+++ b/graph_templates/dashboards/VChnnl/dash.yaml
@@ -3,8 +3,8 @@
 :description: VChnnl
 :graph_properties:
     :app: VChnnl
-    :environment: stable
-    :version: 01.00.00
+    :environment: [stable, beta]
+    :version: [01.00.00]
     :background_color: white
     :foreground_color: black
     :vertical_mark_color: #330000
