--- a/graph_templates/dashboards/omsapi/dash.yaml
+++ b/graph_templates/dashboards/omsapi/dash.yaml
@@ -1,8 +1,8 @@
 
-:name: logist
-:description: logist
+:name: omsapi
+:description: omsapi
 :graph_properties:
-    :app: logist
+    :app: omsapi
     :environment: [stable, beta]
     :version: [01.00.00]
     :background_color: white
