--- a/graph_templates/dashboards/prtlv2/dash.yaml
+++ b/graph_templates/dashboards/prtlv2/dash.yaml
@@ -1,8 +1,8 @@
 
-:name: logist
-:description: logist
+:name: prtlv2
+:description: prtlv2
 :graph_properties:
-    :app: logist
+    :app: prtlv2
     :environment: [stable, beta]
     :version: [01.00.00]
     :background_color: white
