--- a/graph_templates/dashboards/ptlapi/dash.yaml
+++ b/graph_templates/dashboards/ptlapi/dash.yaml
@@ -1,8 +1,8 @@
 
-:name: logist
-:description: logist
+:name: ptlapi
+:description: ptlapi
 :graph_properties:
-    :app: logist
+    :app: ptlapi
     :environment: [stable, beta]
     :version: [01.00.00]
     :background_color: white
