--- a/config/dash.yaml
+++ b/config/dash.yaml
@@ -1,14 +1,14 @@
-:graphite: http://ec2-54-224-232-60.compute-1.amazonaws.com:8085
+:graphite: http://vejao.mireveja.vtex.com.br:8085
 :templatedir: /opt/dashboard/graph_templates
 #:username: admin
 #:password: secret
 :options:
-  :title: MireVeja
+  :title: "VejaO MireVeja"
   :prefix: ""
-  :refresh_rate: 2
+  :refresh_rate: 1
   :graph_columns: 3
-#  :graph_width: 300
-#  :graph_height: 200
+  :graph_width: 400
+  :graph_height: 300
   :interval_filters:
     - :label: Última Hora
       :from: -1hour
