--- a/graph_templates/dashboards/admin/dash.yaml
+++ b/graph_templates/dashboards/admin/dash.yaml
@@ -1,5 +1,5 @@
-:name: admin
-:description: admin
+:name: Portal Admin
+:description: Módulo administrativo do frontend das lojas
 :graph_properties: 
  :background_color: "FAFAFA"
  :foreground_color: "3A3A3A"
