--- a/graph_templates/dashboards/admsvc/dash.yaml
+++ b/graph_templates/dashboards/admsvc/dash.yaml
@@ -1,5 +1,5 @@
-:name: admsvc
-:description: admsvc
+:name: Admin Web Services
+:description: Webservices (antigos) de integração com o frontend / módulo administrativo das lojas
 :graph_properties: 
  :background_color: "FAFAFA"
  :foreground_color: "3A3A3A"
