--- a/graph_templates/dashboards/pfsys/dash.yaml
+++ b/graph_templates/dashboards/pfsys/dash.yaml
@@ -1,5 +1,5 @@
-:name: pfsys
-:description: pfsys
+:name: Gerenciador de Perfil de Usuário
+:description: Sistema gerenciador de informações de perfil de usuário
 :graph_properties: 
  :background_color: "FAFAFA"
  :foreground_color: "3A3A3A"
