--- a/graph_templates/dashboards/rnbwp/dash.yaml
+++ b/graph_templates/dashboards/rnbwp/dash.yaml
@@ -1,5 +1,5 @@
-:name: rnbwp
-:description: rnbwp
+:name: Rates and Benefits
+:description: Sistema de cálculo de taxas e benefícios
 :graph_properties: 
  :background_color: "FAFAFA"
  :foreground_color: "3A3A3A"
