--- a/graph_templates/dashboards/sno/dash.yaml
+++ b/graph_templates/dashboards/sno/dash.yaml
@@ -1,5 +1,5 @@
-:name: sno
-:description: sno
+:name: Shipping Notification
+:description: Shipping Notification
 :graph_properties: 
  :background_color: "FAFAFA"
  :foreground_color: "3A3A3A"
