--- a/graph_templates/dashboards/sno/dash.yaml
+++ b/graph_templates/dashboards/sno/dash.yaml
@@ -1,7 +1,7 @@
 :name: Shipping Notification
 :description: Shipping Notification
 :graph_properties: 
- :background_color: "FAFAFA"
+ :background_color: white
  :foreground_color: "3A3A3A"
  :vertical_mark_color: "#330000"
  :environment: ["beta", "stable"]
