--- a/graph_templates/dashboards/lmngr/dash.yaml
+++ b/graph_templates/dashboards/lmngr/dash.yaml
@@ -1,7 +1,7 @@
 :name: Sistema de Autorização
 :description: Valida quem tem acesso a que e aonde
 :graph_properties: 
- :background_color: "FAFAFA"
+ :background_color: white
  :foreground_color: "3A3A3A"
  :vertical_mark_color: "#330000"
  :environment: ["stable"]
