--- a/graph_templates/dashboards/portal/dash.yaml
+++ b/graph_templates/dashboards/portal/dash.yaml
@@ -1,7 +1,7 @@
 :name: Portal
 :description: Frontend das lojas, consiste na home, departamentos, categorias, busca, página de produto, etc.
 :graph_properties: 
- :background_color: "FAFAFA"
+ :background_color: white
  :foreground_color: "3A3A3A"
  :vertical_mark_color: "#330000"
  :environment: ["beta", "stable"]
